--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Flatten messages in mongoose ValidationError",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "test": "mocha ./test/*.test.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,10 @@
   "bugs": {
     "url": "https://github.com/nepente/flatten-mongoose-validation-error/issues"
   },
-  "homepage": "https://github.com/nepente/flatten-mongoose-validation-error#readme"
+  "homepage": "https://github.com/nepente/flatten-mongoose-validation-error#readme",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^2.5.3",
+    "mongoose": "^4.5.5"
+  }
 }
